--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,7 @@
             "preLaunchTask": "HelloWorld",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}build/helloworld",
+            "program": "${workspaceFolder}/build/helloworld",
             "args": [],
             "stopAtEntry": true,
             "cwd": "${workspaceFolder}",
