--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,7 @@
             "stopAtEntry": true,
             "cwd": "${workspaceFolder}",
             "environment": [],
-                "externalConsole": true,
+                "externalConsole": false,
                 "MIMode": "lldb",
                 
         }
